# mqtt_yarp_bridge

./: CMakeLists.txt  README.md
Matlab scripts/: dataComparison.m
app/: CMakeLists.txt
app/mqttApplication/: CMakeLists.txt
app/mqttApplication/conf/: descriptorScope.xml
app/mqttApplication/scripts/: mqttApplication.xml.template
install/: config.sh
src/: imu_bridge_yarp.py
